--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %} | ChaBug安全 - 一个分享知识、结识伙伴、资源共享的博客。</title>
+    <title>{% block title %}{% endblock %} - 一个分享知识、结识伙伴、资源共享的博客。</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'base.css' %}">
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    {#head头继承块#}
     {% block head %}{% endblock %}
 </head>
 <body>
@@ -17,19 +19,17 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse"
-                data-target="#example-navbar-collapse">
+                data-target="#navbar">
             <span class="sr-only">切换导航</span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">ChaBug安全</a>
+        <a class="navbar-brand" href="{% url 'home' %}">ChaBug安全</a>
     </div>
 
-    <div class="collapse navbar-collapse" id="example-navbar-collapse">
+    <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav">
             <li>
-                <a href="/">
+                <a href="{% url 'home' %}">
                     <span class="glyphicon glyphicon-home"></span> 首页
                 </a>
             </li>
@@ -41,15 +41,51 @@
         </ul>
     </div>
 </div>
-<div class="container">
-    {% block body %}
-    {% endblock %}
-    <hr>
-    <footer>
-        {% block footer %}
-            <p>&copy; 2017 <a href="{% url 'blog' %}">ChaBug安全</a>, Inc.</p>
-        {% endblock %}
-    </footer>
-</div> <!-- /container -->
+{#header头#}
+<div class="header-banner">
+    <div class="container">
+        <h1>{% block title-banner %}博客{% endblock %}</h1>
+        <p>这里是我们的博客内容，更新稍慢，见谅。</p>
+    </div>
+</div>
+
+{#继承的body 主要放博客文章#}
+{% block body %}
+{% endblock %}
+
+{#底部#}
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 col-xs-12">
+                <h4 class="title">关于我们</h4>
+                <ul class="footer-list">
+                    <li>django+bootstrap自写</li>
+                    <li>主要用于技术交流</li>
+                    <li>Power By ChaBug</li>
+                </ul>
+            </div>
+            <div class="col-sm-4 col-xs-12">
+                <h4 class="title">版权声明</h4>
+                <ul class="footer-list">
+                    <li>本站所有资源不得进行任何非法用途.</li>
+                    <li>ChaBug及所属成员对此概不负责任何法律责任.</li>
+                </ul>
+            </div>
+            <div class="col-sm-4 col-xs-12">
+                <h4 class="title">友情链接</h4>
+                <ul class="footer-list">
+                    <li><a href="http://www.chabug.org">ChaBug安全</a></li>
+                    <li><a href="https://jq.qq.com/?_wv=1027&k=5MOaG3O">官方交流群</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="copyright">
+            <p>Welcome! © ChaBug</p>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
