--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ChaBug安全 | 一个分享知识、结识伙伴、资源共享的博客。</title>
+    <title>ChaBug安全 - 一个分享知识、结识伙伴、资源共享的博客。</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
@@ -49,7 +49,7 @@
 
 <div class="container">
     <div class="row">
-        {#公告#}
+        {#公告 TODO 公告细节完善#}
         <div class="col-sm-4">
             <h3 class="title">公告</h3>
             <ul class="list">
@@ -57,7 +57,8 @@
                 <li>ChaBug官网改版</li>
             </ul>
         </div>
-        {#标签页#}
+        {#tab页#}
+        {# todo 趋势及阅读量 #}
         <div class="col-sm-8">
             <h4>
                 <ul class="nav nav-tabs">
@@ -76,14 +77,14 @@
         </div>
     </div>
 </div>
-{#文章列表开始#}
+{#文章列表开始 todo 文章计数#}
 <div class="container">
     <h4 class="tab-title">
         <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
         <span>我们已经有88篇文章了</span>
     </h4>
 </div>
-{#文章列表#}
+{#文章列表 todo 更新、热门完善#}
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
@@ -116,7 +117,7 @@
     </div>
 </div>
 
-{#团队成员#}
+{#团队成员 todo 代码实现 #}
 <div class="container">
     <h4 class="tab-title">
         <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
