分页over 完善分类页 侧边栏单拿出来

--- a/blog/static/base.css
+++ b/blog/static/base.css
@@ -1,7 +1,16 @@
+p {
+    color: #3d464d;
+    font-size: 14px;
+    line-height: 1.6;
+}
 .post-title {
     font-size: 13pt;
     font-weight: bold;
 }
 .post-tags {
     padding-top: 5px;
+}
+li.active a{
+    color: #000;
+    text-decoration: none;
 }
