--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -57,8 +57,9 @@
                 <li>ChaBug官网改版</li>
             </ul>
         </div>
+
         {#tab页#}
-        {# todo 趋势及阅读量 #}
+        {# TODO 趋势及阅读量 #}
         <div class="col-sm-8">
             <h4>
                 <ul class="nav nav-tabs">
@@ -77,14 +78,16 @@
         </div>
     </div>
 </div>
-{#文章列表开始 todo 文章计数#}
+
+{#文章列表计数#}
 <div class="container">
     <h4 class="tab-title">
         <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
-        <span>我们已经有88篇文章了</span>
+        <span>我们已经有<b>{{ count }}</b>篇文章了</span>
     </h4>
 </div>
-{#文章列表 todo 更新、热门完善#}
+
+{#文章列表 TODO 更新、热门完善#}
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
@@ -117,7 +120,7 @@
     </div>
 </div>
 
-{#团队成员 todo 代码实现 #}
+{#团队成员 TODO 代码实现 #}
 <div class="container">
     <h4 class="tab-title">
         <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
@@ -193,7 +196,7 @@
     </div>
     <div class="container-fluid">
         <div class="copyright">
-            <p>Welcome! © ChaBug</p>
+            <p>Welcome!</p>
         </div>
     </div>
 </footer>
