--- a/blog/templates/blog_detail.html
+++ b/blog/templates/blog_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block title %}{{ blog.blog_title }}{% endblock %}
 {% block body %}
-
+{{ blog.blog_content }}
 {% endblock %}
