--- a/blog/templates/blog_list.html
+++ b/blog/templates/blog_list.html
@@ -27,6 +27,8 @@
                                 </span>
                                 <span class="glyphicon glyphicon-user"></span>
                                 <span> {{ blog.blog_author }}</span>
+                                <span class="glyphicon glyphicon-eye-open"></span>
+                                <span> {{ blog.get_read_num }}</span>
                             </div>
                         </div>
                     </div>
